--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2631,107 +2631,107 @@ stories:
   domain: http://www.newsdemocrat.com/
   link: https://www.newsdemocrat.com/2019/06/26/federal-drug-and-weapons-bust/
 images:
-- name: castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
-- name: miamibeach-miamibeach-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-plentiful.jpg
-- name: white-house-lawn-white-house-lawn-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-really-hot.jpg
-- name: cargo-ship-cargo-ship-on-sea-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-yellow-collage.jpg
-- name: white-house-lawn-white-house-window-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-rainbow-festival.jpg
-- name: server-cloud-server-racks-clouds-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-two.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-far-away.jpg
-- name: oldcabin-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
-- name: oldroad-old-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-missle.jpg
-- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
-- name: power-lines-power-lines-empty-space-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-free-woman.jpg
-- name: carry-load-carryload-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-oily-mcoilface.jpg
-- name: aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-31-156-800-500-0-max-0--1--1.jpg
-- name: machine-road-machine-road-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-dream.jpg
-- name: christianity-christianity-under-construction-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
-- name: status-berlin-status-berlin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
-- name: old-granary-field-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-really-hot.jpg
-- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
-- name: aws-s3-lighthouse-lighthouse-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still.jpg
-- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
-- name: machine-road-machine-road-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-far-away.jpg
-- name: miamibeach-miamibeach-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sand-paper.jpg
-- name: oldsmallboat-oldsmallboat-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-crunch-paper.jpg
-- name: san-francisco-street-view-san-francisco-street-view-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-constitution.jpg
-- name: white-house-whitehouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-kand-two.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dry-skin.jpg
-- name: server-cloud-server-racks-door-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-horiz-circuit.jpg
-- name: downtown-fredericksburg-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-dark-dali.JPG
-- name: soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-marcel-duchamp.jpg
-- name: school-clouds-church-clouds-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
-- name: ellis-island-ellis-island-room-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-circuit.jpg
-- name: store-on-corner-store-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-really-hot.jpg
-- name: liberty-back-statue-liberty-back-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-light-dali.jpg
-- name: gypsy-wagon-gypsywagon-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-monet-one.jpg
-- name: powerlines-power-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colored-circuits.jpg
-- name: white-house-whitehouse-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-smooth-ride.jpg
-- name: dc-statue-dcstatue-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-creativity.jpg
-- name: windowmountain-window-mountain-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-space-pizza.jpg
-- name: oldbarn-oldbarn-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sand-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-wols.jpg
-- name: old-cabin-oldcabin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-clean-view.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-- name: supreme-court-supremecourt-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crafty-painting.jpg
-- name: gypsy-wagon-gypsywagon-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-plentiful.jpg
-- name: store-on-corner-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
-- name: border-crossing-bordercrossing-plentiful.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-plentiful.png
-- name: los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alien-goggles.jpg
-- name: wind-mills-windmills-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-granite.jpg
-- name: dragon-desert-desert-dragon-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-jap-dys-1.jpg
-- name: beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-- name: castle-wall-DSC-0067-space-pizza.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-space-pizza.JPG
+- name: berlinwall2-berlinwall-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-oily-mcoilface.jpg
+- name: old-cabin-oldcabin-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-soul.jpg
+- name: gypsymosaic-gypsy-eyes-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dry-skin.jpg
+- name: death-valley-death-valley-national-park-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-marcel-duchamp.jpg
+- name: rain-princess-DSC_0076.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0076.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
+- name: dragon-desert-desert-dragon-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-kandinsky-bv.jpg
+- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
+- name: old-church-oldchurch-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-nazi-poster.jpg
+- name: oldhotel-oldhotel-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-green-zuma.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-two.jpg
+- name: udnie-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
+- name: old-door-lock-old-door-lock-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-creativity.jpg
+- name: rockingchair-rockingchair-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dry-skin.jpg
+- name: lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-umberto-bocc.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-copper-circuit-2.jpg
+- name: subway-subway-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-storm.jpg
+- name: stories-docks-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-docks-copper-circuit.jpg
+- name: status-berlin-status-berlin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-internet-numbers.jpg
+- name: death-valley-death-valley-national-park-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-aqua.jpg
+- name: cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+- name: oldhotel-oldhotel-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
+- name: old-church-oldchurch-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-storm.jpg
+- name: white-house-whitehouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-internet-numbers.jpg
+- name: eduardo-eduardo-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-three.jpg
+- name: nyc-flag-nycflag-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sand-paper.jpg
+- name: gypsy-wagon-gypsywagon-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
+- name: old-granary-field-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dark-soul.jpg
+- name: border-crossing-bordercrossing-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-dresden.png
+- name: old-cabin-oldcabin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-creativity.jpg
+- name: statue-of-liberty-front-view-statueofliberty-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-neo-instinct.jpg
+- name: miamibeach-miamibeach-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-electricity.jpg
+- name: dragon-desert-desert-dragon-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
+- name: power-lines-power-lines-empty-space-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
+- name: razorwire-DSC-0080-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-dream.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
+- name: gypsy-wagon-gypsywagon-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sand-paper.jpg
+- name: ellis-island-ellisisland-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dry-skin.jpg
+- name: server-cloud-server-racks-door-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-aqua.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-crunch-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-crunch-paper.JPG
+- name: razorwire-DSC-0080-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-graham-sutherland.jpg
+- name: oldhouse-oldhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crunch-paper.jpg
+- name: containership-containership-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purp-paper.jpg
+- name: curtain-curtain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-graham-sutherland.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
+- name: old-gas-pumps-oldgaspumps-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-circuit.jpg
+- name: blossombar-hot-spicy-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-24-99.jpg
+- name: cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-neo-instinct.jpg
+- name: nazi-invasion-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
+- name: oldhotel-oldhotel-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-blocks.jpg
 ---
 Bahamas Police Were Told Billionaire Cline Was On Helicopter.&nbsp;Stevenson's Double Lifts Lake Norden To Fourth Of July Win Over Milbank.&nbsp;Sharjah Institute Of Documentation And Archiving Decides For MediaINFO.&nbsp;Explosion Causes Partial Collapse Of Dorm At University.&nbsp;Fricks Memory Alive And Well During Fourth Of July Race.&nbsp;Explosion Causes Partial Collapse Of Dorm At University.&nbsp;Philly Got Patti LaBelle's Name Wrong On Honorary Street.&nbsp;Calls Spike For Fireworks Complaints On Otherwise Quiet Night.&nbsp;
